# Embedded_AI_File_Organization

./: .gitignore  README.md  dropFrame.h
File_Organizer/: CMakeLists.txt  dropFrame.cpp  mainwindow.ui
